# semcomp2022

./: .gitignore  README.md  pyproject.toml
tarefa_1 - Usando o sklearn/: tarefa_1.py
tarefa_2 - FlippyBird/: flappyBird_manual.py  flappyBird_solucao_decision_tree.py  flappyBird_solucao_genetico.py  inputs.txt
tarefa_3 - Classificador de Imagens/gui/: main.py
tarefa_3 - Classificador de Imagens/gui/templates/: classification.html  index.html  verification.html
tarefa_3 - Classificador de Imagens/sklearn/: classifier.py
