[tool.poetry]
name = "codigo"
version = "0.1.0"
description = ""
authors = ["Bruno <bruno@potelo.com.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "*"
scikit-learn = "*"
scipy = ">=1.8"
pygame = "*"
pydotplus = "*"
neat-python = "*"
graphviz = "*"
pandas = '*'
pymysql = '*'
matplotlib = '*'
transformers = '*'
flask = '*'
python-multipart = '*'

imblearn = "*"
skl2onnx = "*"
starlette = "*"
fastapi = "*"
uvicorn = "*"

scikit-image = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
